# clawforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  flake.nix  nginx.conf
.github/workflows/: ci.yml
apps/macos/: main.swift
apps/mobile/: App.tsx
backend/acp/: Cargo.toml
backend/acp/src/: acp_announce.rs  canvas_host.rs  client.rs  lib.rs  registry.rs  server.rs  telemetry.rs  types.rs
backend/agent/: Cargo.toml
backend/agent/src/: agent_loop.rs  assistant_identity.rs  chat.rs  context_window.rs  lib.rs  prompt_cache.rs  session_state.rs  system_prompt.rs  tool_dispatcher.rs
backend/browser/: Cargo.toml
backend/channels/: Cargo.toml
backend/channels/src/: applescript.rs  bluebubbles.rs  bluebubbles_client.rs  discord.rs  discord_embeds.rs  discord_slash.rs  discord_threads.rs  discord_voice.rs  googlechat.rs  imessage.rs  irc.rs  lib.rs  line.rs  line_receive.rs  line_rich_menu.rs  line_send.rs  matrix.rs  mattermost.rs  msteams.rs  rate_limiter.rs  signal.rs  slack.rs  slack_blocks.rs  slack_events.rs  slack_modals.rs  telegram.rs  telegram_commands.rs  telegram_groups.rs  telegram_inline.rs  telegram_media.rs  wa_groups.rs  wa_media.rs  whatsapp.rs
backend/cli/: Cargo.toml
backend/cli/examples/: coding_agent.rs  github_pr_reviewer.rs  research_agent.rs
backend/cli/src/: agents_cmd.rs  api.rs  config.rs  doctor_cmd.rs  main.rs  memory_cmd.rs  models_cmd.rs  sessions_cmd.rs  status_cmd.rs  terminal_output.rs
backend/commands/: Cargo.toml
backend/companion/: Cargo.toml
backend/companion/src/: clawdbot.rs  lib.rs  moltbot.rs  node_host.rs  registry.rs  traits.rs
backend/config/: Cargo.toml
backend/config/src/: defaults.rs  env.rs  io.rs  lib.rs  migration.rs  redact.rs  schema.rs  validation.rs
backend/controlplane/: Cargo.toml
backend/controlplane/examples/: demo.rs
backend/controlplane/src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs
backend/controlplane/src/compliance/: mod.rs  model.rs  report.rs
backend/controlplane/src/gateway/: decision.rs  engine.rs  log.rs  mod.rs  policy.rs  request.rs
backend/controlplane/src/governance/: mod.rs  model.rs  store.rs
backend/controlplane/src/integrations/: mod.rs  model.rs  placeholders.rs  store.rs
backend/controlplane/src/marketplace/: mod.rs  model.rs  seed.rs  store.rs
backend/controlplane/src/mcp/: mod.rs  model.rs  store.rs
backend/controlplane/src/observability/: event.rs  mod.rs  model.rs  seed.rs  store.rs
backend/controlplane/src/registry/: lifecycle.rs  mod.rs  model.rs  seed.rs  store.rs  validation.rs
backend/core/: Cargo.toml
backend/core/src/: channel.rs  error.rs  event.rs  lib.rs  message.rs  session_export.rs  session_policy.rs  tools.rs  traits.rs  types.rs
backend/daemon/: Cargo.toml
backend/executor/: Cargo.toml
backend/executor/src/: executor.rs
backend/gateway/: Cargo.toml
backend/gateway/src/: attachments.rs  auth.rs  auth_health.rs  config_reload.rs  control_ui.rs  health_api.rs  health_monitor.rs  lib.rs  openai_compat.rs  rate_limit.rs  responses_api.rs  server.rs  session_registry.rs  ws_protocol.rs  ws_server.rs
backend/hooks/: Cargo.toml
backend/infra/: Cargo.toml
backend/infra/src/: channel_activity.rs  cost_tracker.rs  device_auth_store.rs  device_identity.rs  device_pairing.rs  lib.rs  usage_scanner.rs
backend/logging/: Cargo.toml
backend/logging/src/: event_logger.rs  lib.rs  logger.rs  redact.rs
backend/markdown/: Cargo.toml
backend/media/: Cargo.toml
backend/media/src/: audio.rs  image.rs  lib.rs  media_server.rs  mime_detect.rs
backend/memory/: Cargo.toml
backend/memory/src/: batch_embed.rs  embeddings.rs  hybrid.rs  lib.rs  manager.rs  mmr.rs  qmd_manager.rs  query_expansion.rs  sqlite_store.rs  store.rs  sync_pipeline.rs  temporal.rs  types.rs
backend/planner/: Cargo.toml
backend/planner/src/: auth_profiles.rs  lib.rs  planner.rs  skills.rs
backend/planner/src/providers/: anthropic.rs  catalog.rs  mock.rs  mod.rs  ollama.rs  openai_compatible.rs  openrouter.rs
backend/plugins/: Cargo.toml
backend/routing/: Cargo.toml
backend/sandbox/: Cargo.toml
backend/scheduler/: Cargo.toml
backend/scheduler/src/: cron_delivery.rs  cron_parser.rs  cron_store.rs  heartbeat.rs  lib.rs  retry.rs  run_log.rs  scheduler.rs  session_reaper.rs  stagger.rs
backend/security/: Cargo.toml
backend/security/src/: audit.rs  auto_fix.rs  channel_audit.rs  dangerous_tools.rs  dm_policy.rs  external_content.rs  lib.rs  pairing.rs  setup_code.rs  skill_scanner.rs
backend/supervisor/: Cargo.toml
backend/supervisor/src/: kill_tree.rs  lib.rs  pty_supervisor.rs  store.rs  supervisor.rs  timeout_kill.rs
backend/tools/: Cargo.toml
backend/tools/src/: apply_patch.rs  bash_exec.rs  browser.rs  compaction.rs  cron_tool.rs  file.rs  image.rs  lib.rs  loop_detection.rs  memory_tool.rs  message_tool.rs  model_catalog.rs  node.rs  patch_validator.rs  process_registry.rs  sessions_tool.rs  shell.rs  skill_install.rs  subagents_tool.rs  web.rs
backend/tts/: Cargo.toml
backend/tts/src/: deepgram.rs  engine.rs  lib.rs  tool.rs  voice_call.rs
backend/tui/: Cargo.toml
backend/tui/src/: app.rs  input.rs  lib.rs  render.rs  streaming.rs
backend/understanding/: Cargo.toml
backend/understanding/src/: audio.rs  doc_parse.rs  entity.rs  lib.rs  link.rs  ocr.rs  stt.rs  video_thumb.rs  vision.rs
docs/: README.md  architecture.md  demo.md  developer-guide.md  diagrams.md  enterprise-integrations.md  enterprise.md  governance.md  government-compliance.md  government-municipality.md  installation.md  limitations.md  marketplace.md  mcp-governance.md  model-providers.md  observability.md  product-positioning.md  registry.md  roadmap.md  security-disclaimer.md  security-gateway.md  uae-pdpl.md  use-cases.md
docs/screenshots/: README.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts  useEventStream.ts
orchestration/: README.md
testing/: README.md
(+58 files in other folders)
