[workspace]
members = [
    "backend/core",
    "backend/tools",
    "backend/planner",
    "backend/executor",
    "backend/scheduler",
    "backend/supervisor",
    "backend/cli",
    "backend/memory",
    "backend/channels",
    "backend/media",
    "backend/acp",
    "backend/security",
    "backend/tts",
    "backend/companion",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
axum = "0.7"
tokio-stream = "0.1"
