[workspace]
members = [
    "backend/core",
    "backend/tools",
    "backend/planner",
    "backend/executor",
    "backend/scheduler",
    "backend/supervisor",
    "backend/cli",
    "backend/memory",
    "backend/channels",
    "backend/media",
    "backend/acp",
    "backend/security",
    "backend/tts",
    "backend/companion",
    "backend/hooks",
    "backend/plugins",
    "backend/understanding",
    "backend/sandbox",
    "backend/routing",
    "backend/commands",
    "backend/daemon",
    "backend/config", "backend/agent", "backend/gateway", "backend/infra", "backend/logging", "backend/markdown",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
axum = "0.7"
tokio-stream = "0.1"
regex = "1"
once_cell = "1"
dirs = "5"
