[package]
name = "clawforge-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
clawforge-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json"] }
axum = { workspace = true }
