[package]
name = "clawforge-channels"
version = "0.1.0"
edition = "2024"

[dependencies]
clawforge-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Channel specific
teloxide = "0.13" # Telegram
serenity = "0.12" # Discord
axum = { workspace = true } # For webhooks
reqwest = { version = "0.12", features = ["json"] } # BlueBubbles + Slack + Matrix
hmac = "0.12" # Slack signature verification
sha2 = "0.10" # Slack signature verification
hex = "0.4"   # Slack signature encoding
urlencoding = "2" # Matrix room_id URL encoding

