[package]
name = "clawforge-companion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
