[package]
name = "clawforge-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_yaml2 = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = "1"
once_cell = "1"
dirs = "5"
chrono = { workspace = true }
glob = "0.3"
toml = "0.8"
