[package]
name = "clawforge-executor"
version = "0.1.0"
edition = "2021"
description = "Capability-checked action executor for ClawForge"

[dependencies]
clawforge-core = { path = "../core" }
clawforge-tools = { path = "../tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
url = "2"
