[package]
name = "clawforge-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
notify = "6.1.1" # for config_reload watch
uuid = { workspace = true, features = ["v4"] }
futures = "0.3"
clawforge-core = { path = "../core" }
clawforge-agent = { path = "../agent" }
