[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
