[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
