[package]
name = "media"
version = "0.1.0"
edition = "2024"

[dependencies]
clawforge-core = { path = "../core" }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Media Specific
bytes = "1.5"
axum = { workspace = true }
