[package]
name = "clawforge-planner"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM planner for ClawForge"

[dependencies]
clawforge-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
