[package]
name = "clawforge-security"
version = "0.1.0"
edition = "2024"

[dependencies]
clawforge-core = { path = "../core" }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
once_cell.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
