[package]
name = "clawforge-tools"
version = "0.1.0"
edition = "2021"
description = "Standard tool library for ClawForge agents"

[dependencies]
clawforge-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3.0"
