[package]
name = "clawforge-tts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
async-trait.workspace = true
uuid = { workspace = true, features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
base64 = "0.22"
