[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crossterm = "0.27"
futures-util = "0.3"
ratatui = "0.26"
reqwest = { version = "0.12", features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
