[package]
name = "clawforge-understanding"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
base64 = "0.22"
regex.workspace = true
once_cell.workspace = true
